# computer-vision-video-capture-pattern-detection

./: .env.example  .gitignore  1.0.0  README.md  capture.py  pyproject.toml  requirements-eval.txt
.github/: copilot-instructions.md
data/samples/: README.md
docs/: architecture.md  execution_guide.md  setup_guide.md
evaluation/: QUICKSTART.md  README.md
evaluation/azure_ai_foundry/: __init__.py  cost_tracker.py  gpt4v_client.py  prompt_templates.py  setup_guide.md
evaluation/results/: .gitkeep  apple_eval.json  cost_analysis.json  fruits_quality_single_image_eval.json
evaluation/scripts/: compare_methods.py  eval_batch.py  eval_single_image.py
legacy/: capture.py  eye_detect_haar.py  face_detect_haar.py  yolo_detect.py  yolo_detect_run.py
src/: __init__.py  main.py
src/config/: __init__.py  settings.py
src/events/: __init__.py  publisher.py
src/pipeline/: __init__.py  decorators.py  orchestrator.py
src/quality/: __init__.py  score.py
src/search/: __init__.py  indexer.py
src/utils/: __init__.py  video_simulator.py
src/vision/: __init__.py  capture.py  detect.py
tests/: __init__.py  test_pipeline.py  test_quality.py  test_vision.py
